force-app/main/default/objects/Krow__Xero_Integration_Detail__c/Krow__Xero_Integration_Detail__c.object-meta.xml
<CustomObject>
    <label>Xero Integration Detail</label>
    <nameField>
        <displayFormat>XeroIntegration{000}</displayFormat>
        <label>Xero Integration Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Integration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>