force-app/main/default/objects/Krow__Xero_Integration_Detail__c/fields/Krow__Authorized__c.field-meta.xml
<CustomField>
    <fullName>Krow__Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if xero organization has been authorized to post records to xero.</description>
    <label>Authorized</label>
    <type>Checkbox</type>
</CustomField>