force-app/main/default/objects/Krow__Xero_Integration_Detail__c/fields/Krow__Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Krow__Consumer_Secret__c</fullName>
    <label>Consumer Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>