force-app/main/default/objects/Krow__Xero_Integration_Detail__c/fields/Krow__Default_Expense_User__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Expense_User__c</fullName>
    <label>Default Expense User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>