force-app/main/default/objects/Krow__Xero_Integration_Detail__c/fields/Krow__Default_Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Invoice_Account__c</fullName>
    <label>Default Invoice Account</label>
    <length>15</length>
    <type>Text</type>
</CustomField>