force-app/main/default/objects/Krow__Xero_Integration_Detail__c/fields/Krow__OrganisationID__c.field-meta.xml
<CustomField>
    <fullName>Krow__OrganisationID__c</fullName>
    <label>OrganisationID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>