force-app/main/default/objects/Krow__Xero_Integration_Detail__c/fields/Krow__Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Krow__Private_Key__c</fullName>
    <label>Private Key</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>