force-app/main/default/objects/Krow__Xero_Integration_Detail__c/fields/Krow__Xero_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Xero_Organization_Name__c</fullName>
    <description>Organization name for which this record is authenticated.</description>
    <label>Xero Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>