force-app/main/default/objects/Krow__Xero_Integration_Detail__c/fields/Krow__Xero_Scope__c.field-meta.xml
<CustomField>
    <fullName>Krow__Xero_Scope__c</fullName>
    <label>Xero Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>