force-app/main/default/objects/Krow__Xero_Integration_Detail__c/fields/Krow__Xero_Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Xero_Tenant_Id__c</fullName>
    <label>Xero Tenant Id</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>