force-app/main/default/objects/Krow__Xero_Integration_Detail__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Consumer_Key__c</columns>
    <columns>Krow__Consumer_Secret__c</columns>
    <columns>Krow__Private_Key__c</columns>
    <columns>Krow__Refresh_Token__c</columns>
    <columns>Krow__Xero_Organization_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Krow__Authorized__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>